# edge_detection-

./: .gitignore  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/div/edgedetectionapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/div/edgedetectionapp/: FrameWebSocketServer.kt  GLRenderer.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/div/edgedetectionapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.ts
